[package]
name = "brickedbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {git = "https://github.com/serenity-rs/serenity", branch = 'current', default-features = false, features = ["cache", "client", "gateway", "rustls_backend", "model", "unstable_discord_api"]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clokwerk = "0.4.0-rc1"
chrono = "0.4.19"
rand = "0.8.5"
source_query = "0.1.3"